// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snippet renders correctly 1`] = `
<DocumentFragment>
  .css-1rjf9yl-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-19hs08a-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.css-1e05ne7-StyledSpan {
  display: block;
}

.css-1e05ne7-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.css-1eagt2o-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1rjf9yl-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 css-19hs08a-StyledText-PreText e13y3mga0"
      >
        <span
          class="css-1e05ne7-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="css-1eagt2o-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":r1:"
          aria-describedby=":r1:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly in multiline  1`] = `
<DocumentFragment>
  .css-358s5-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.css-pfeypm-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.css-bsg2e2-StyledSpan {
  display: block;
}

.css-bsg2e2-StyledSpan:after {
  content: '';
  padding: 32px;
}

.css-z90995-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-98uomi-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.css-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.css-19pgd1x-StyledText-AlignCenterText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-358s5-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <div
        class="css-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 css-pfeypm-StyledText-PreText e13y3mga0"
        >
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="css-z90995-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":r3:"
          aria-describedby=":r3:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="css-98uomi-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="css-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 css-19pgd1x-StyledText-AlignCenterText e13y3mga0"
          >
            Show 
            <svg
              class="e1q0gj900 css-urfwl0-sizeStyles-AnimatedArrowIcon e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.46967 7.46967C5.76256 7.17678 6.23744 7.17678 6.53033 7.46967L10.25 11.1893L13.9697 7.46967C14.2626 7.17678 14.7374 7.17678 15.0303 7.46967C15.3232 7.76256 15.3232 8.23744 15.0303 8.53033L10.7803 12.7803C10.6397 12.921 10.4489 13 10.25 13C10.0511 13 9.86032 12.921 9.71967 12.7803L5.46967 8.53033C5.17678 8.23744 5.17678 7.76256 5.46967 7.46967Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly in multiline with prefix command 1`] = `
<DocumentFragment>
  .css-358s5-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.css-pfeypm-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.css-e8qyve-StyledSpan {
  display: block;
}

.css-e8qyve-StyledSpan:after {
  content: '';
  padding: 32px;
}

.css-e8qyve-StyledSpan:before {
  color: #727683;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: '$';
  padding-right: 8px;
}

.css-z90995-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-98uomi-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.css-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.css-19pgd1x-StyledText-AlignCenterText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-358s5-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <div
        class="css-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 css-pfeypm-StyledText-PreText e13y3mga0"
        >
          <span
            class="css-e8qyve-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-e8qyve-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-e8qyve-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="css-e8qyve-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-e8qyve-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-e8qyve-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="css-z90995-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":r9:"
          aria-describedby=":r9:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="css-98uomi-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="css-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 css-19pgd1x-StyledText-AlignCenterText e13y3mga0"
          >
            Show 
            <svg
              class="e1q0gj900 css-urfwl0-sizeStyles-AnimatedArrowIcon e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.46967 7.46967C5.76256 7.17678 6.23744 7.17678 6.53033 7.46967L10.25 11.1893L13.9697 7.46967C14.2626 7.17678 14.7374 7.17678 15.0303 7.46967C15.3232 7.76256 15.3232 8.23744 15.0303 8.53033L10.7803 12.7803C10.6397 12.921 10.4489 13 10.25 13C10.0511 13 9.86032 12.921 9.71967 12.7803L5.46967 8.53033C5.17678 8.23744 5.17678 7.76256 5.46967 7.46967Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly in multiline with prefix lines number 1`] = `
<DocumentFragment>
  .css-358s5-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.css-pfeypm-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.css-1flh8pl-StyledSpan {
  display: block;
}

.css-1flh8pl-StyledSpan:after {
  content: '';
  padding: 32px;
}

.css-1flh8pl-StyledSpan:before {
  color: #727683;
  width: 35px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: counter(section);
  padding-right: 8px;
}

.css-z90995-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-98uomi-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.css-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.css-19pgd1x-StyledText-AlignCenterText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-358s5-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <div
        class="css-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 css-pfeypm-StyledText-PreText e13y3mga0"
        >
          <span
            class="css-1flh8pl-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-1flh8pl-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-1flh8pl-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="css-1flh8pl-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-1flh8pl-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-1flh8pl-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="css-z90995-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":r6:"
          aria-describedby=":r6:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="css-98uomi-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="css-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 css-19pgd1x-StyledText-AlignCenterText e13y3mga0"
          >
            Show 
            <svg
              class="e1q0gj900 css-urfwl0-sizeStyles-AnimatedArrowIcon e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.46967 7.46967C5.76256 7.17678 6.23744 7.17678 6.53033 7.46967L10.25 11.1893L13.9697 7.46967C14.2626 7.17678 14.7374 7.17678 15.0303 7.46967C15.3232 7.76256 15.3232 8.23744 15.0303 8.53033L10.7803 12.7803C10.6397 12.921 10.4489 13 10.25 13C10.0511 13 9.86032 12.921 9.71967 12.7803L5.46967 8.53033C5.17678 8.23744 5.17678 7.76256 5.46967 7.46967Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with copiedText 1`] = `
<DocumentFragment>
  .css-1rjf9yl-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-19hs08a-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.css-1e05ne7-StyledSpan {
  display: block;
}

.css-1e05ne7-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.css-1eagt2o-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1rjf9yl-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 css-19hs08a-StyledText-PreText e13y3mga0"
      >
        <span
          class="css-1e05ne7-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="css-1eagt2o-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":ri:"
          aria-describedby=":ri:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with copyText 1`] = `
<DocumentFragment>
  .css-1rjf9yl-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-19hs08a-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.css-1e05ne7-StyledSpan {
  display: block;
}

.css-1e05ne7-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.css-1eagt2o-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1rjf9yl-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 css-19hs08a-StyledText-PreText e13y3mga0"
      >
        <span
          class="css-1e05ne7-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="css-1eagt2o-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":rg:"
          aria-describedby=":rg:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with hideText 1`] = `
<DocumentFragment>
  .css-358s5-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.css-pfeypm-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.css-bsg2e2-StyledSpan {
  display: block;
}

.css-bsg2e2-StyledSpan:after {
  content: '';
  padding: 32px;
}

.css-z90995-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-98uomi-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.css-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.css-19pgd1x-StyledText-AlignCenterText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-358s5-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <div
        class="css-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 css-pfeypm-StyledText-PreText e13y3mga0"
        >
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="css-z90995-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":rk:"
          aria-describedby=":rk:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="css-98uomi-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="css-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 css-19pgd1x-StyledText-AlignCenterText e13y3mga0"
          >
            Show 
            <svg
              class="e1q0gj900 css-urfwl0-sizeStyles-AnimatedArrowIcon e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.46967 7.46967C5.76256 7.17678 6.23744 7.17678 6.53033 7.46967L10.25 11.1893L13.9697 7.46967C14.2626 7.17678 14.7374 7.17678 15.0303 7.46967C15.3232 7.76256 15.3232 8.23744 15.0303 8.53033L10.7803 12.7803C10.6397 12.921 10.4489 13 10.25 13C10.0511 13 9.86032 12.921 9.71967 12.7803L5.46967 8.53033C5.17678 8.23744 5.17678 7.76256 5.46967 7.46967Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with initiallyExpanded 1`] = `
<DocumentFragment>
  .css-358s5-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-rk9ngy-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: visible;
  height: auto;
  max-height: initial;
}

.css-pfeypm-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.css-bsg2e2-StyledSpan {
  display: block;
}

.css-bsg2e2-StyledSpan:after {
  content: '';
  padding: 32px;
}

.css-z90995-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-1ucxira-ShowMoreContainer {
  width: 100%;
  box-shadow: none;
}

.css-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.css-19pgd1x-StyledText-AlignCenterText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-1cbh5yi-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

.css-1cbh5yi-sizeStyles-AnimatedArrowIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-358s5-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <div
        class="css-rk9ngy-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 css-pfeypm-StyledText-PreText e13y3mga0"
        >
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="css-z90995-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":rq:"
          aria-describedby=":rq:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="css-1ucxira-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="true"
          class="css-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 css-19pgd1x-StyledText-AlignCenterText e13y3mga0"
          >
            Hide 
            <svg
              class="e1q0gj900 css-1cbh5yi-sizeStyles-AnimatedArrowIcon e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.46967 7.46967C5.76256 7.17678 6.23744 7.17678 6.53033 7.46967L10.25 11.1893L13.9697 7.46967C14.2626 7.17678 14.7374 7.17678 15.0303 7.46967C15.3232 7.76256 15.3232 8.23744 15.0303 8.53033L10.7803 12.7803C10.6397 12.921 10.4489 13 10.25 13C10.0511 13 9.86032 12.921 9.71967 12.7803L5.46967 8.53033C5.17678 8.23744 5.17678 7.76256 5.46967 7.46967Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with showText 1`] = `
<DocumentFragment>
  .css-358s5-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.css-pfeypm-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.css-bsg2e2-StyledSpan {
  display: block;
}

.css-bsg2e2-StyledSpan:after {
  content: '';
  padding: 32px;
}

.css-z90995-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-98uomi-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.css-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.css-19pgd1x-StyledText-AlignCenterText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

.css-urfwl0-sizeStyles-AnimatedArrowIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-358s5-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <div
        class="css-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 css-pfeypm-StyledText-PreText e13y3mga0"
        >
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="css-z90995-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":rn:"
          aria-describedby=":rn:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="css-98uomi-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="css-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 css-19pgd1x-StyledText-AlignCenterText e13y3mga0"
          >
            Test 
            <svg
              class="e1q0gj900 css-urfwl0-sizeStyles-AnimatedArrowIcon e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.46967 7.46967C5.76256 7.17678 6.23744 7.17678 6.53033 7.46967L10.25 11.1893L13.9697 7.46967C14.2626 7.17678 14.7374 7.17678 15.0303 7.46967C15.3232 7.76256 15.3232 8.23744 15.0303 8.53033L10.7803 12.7803C10.6397 12.921 10.4489 13 10.25 13C10.0511 13 9.86032 12.921 9.71967 12.7803L5.46967 8.53033C5.17678 8.23744 5.17678 7.76256 5.46967 7.46967Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with single line with prefix command 1`] = `
<DocumentFragment>
  .css-1rjf9yl-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-19hs08a-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.css-1damn3v-StyledSpan {
  display: block;
}

.css-1damn3v-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.css-1damn3v-StyledSpan:before {
  color: #727683;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: '$';
  padding-right: 8px;
}

.css-1eagt2o-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1rjf9yl-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 css-19hs08a-StyledText-PreText e13y3mga0"
      >
        <span
          class="css-1damn3v-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="css-1eagt2o-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":rc:"
          aria-describedby=":rc:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with single line with prefix lines number 1`] = `
<DocumentFragment>
  .css-1rjf9yl-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-19hs08a-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.css-1720tme-StyledSpan {
  display: block;
}

.css-1720tme-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.css-1720tme-StyledSpan:before {
  color: #727683;
  width: 35px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: counter(section);
  padding-right: 8px;
}

.css-1eagt2o-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1rjf9yl-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 css-19hs08a-StyledText-PreText e13y3mga0"
      >
        <span
          class="css-1720tme-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="css-1eagt2o-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":re:"
          aria-describedby=":re:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet should click on extend button to display full content on  1`] = `
<DocumentFragment>
  .css-358s5-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 4px;
}

.css-jdits0-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.css-rk9ngy-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: visible;
  height: auto;
  max-height: initial;
}

.css-pfeypm-StyledText-PreText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.css-bsg2e2-StyledSpan {
  display: block;
}

.css-bsg2e2-StyledSpan:after {
  content: '';
  padding: 32px;
}

.css-z90995-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #f9f9fa;
  border-radius: 4px;
  border: 2px solid transparent;
}

.css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-1ucxira-ShowMoreContainer {
  width: 100%;
  box-shadow: none;
}

.css-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.css-19pgd1x-StyledText-AlignCenterText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-1cbh5yi-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

.css-1cbh5yi-sizeStyles-AnimatedArrowIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-358s5-Container e1q0gj906"
  >
    <div
      class="css-jdits0-Stack-StyledStack e1q0gj905"
    >
      <div
        class="css-rk9ngy-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 css-pfeypm-StyledText-PreText e13y3mga0"
        >
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="css-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="css-z90995-ButtonContainer e1q0gj904"
      >
        <div
          aria-controls=":rt:"
          aria-describedby=":rt:"
          class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="css-1xcp86l-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="css-1ucxira-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="true"
          class="css-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 css-19pgd1x-StyledText-AlignCenterText e13y3mga0"
          >
            Hide 
            <svg
              class="e1q0gj900 css-1cbh5yi-sizeStyles-AnimatedArrowIcon e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.46967 7.46967C5.76256 7.17678 6.23744 7.17678 6.53033 7.46967L10.25 11.1893L13.9697 7.46967C14.2626 7.17678 14.7374 7.17678 15.0303 7.46967C15.3232 7.76256 15.3232 8.23744 15.0303 8.53033L10.7803 12.7803C10.6397 12.921 10.4489 13 10.25 13C10.0511 13 9.86032 12.921 9.71967 12.7803L5.46967 8.53033C5.17678 8.23744 5.17678 7.76256 5.46967 7.46967Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
